feat(disk): allow gitops managed disk to be updated with force flag
